acf: Ensure consistent edge padding on mobile for flexible components

--- a/assets/sass/acf/_flexible-content.scss
+++ b/assets/sass/acf/_flexible-content.scss
@@ -1,6 +1,8 @@
 .page-template-flexible-content-page {
 	section {
-		margin: $size__component-padding;
+        margin: $size__component-padding;
+        padding-left: 1rem;
+        padding-right: 1rem;
 	}
 }
 
