--- a/assets/sass/acf/_hero.scss
+++ b/assets/sass/acf/_hero.scss
@@ -1,5 +1,6 @@
 section.hero {
     margin: 0;
+    padding: 0;
 }
 
 .hero__wrap {
